--- a/packages/interchain-kit/package.json
+++ b/packages/interchain-kit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interchain-kit",
+  "name": "titan-kit",
   "version": "0.3.24",
   "author": "Hyperweb <developers@hyperweb.io>",
   "description": "Universal wallet connector for the interchain",
