--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@interchain-kit/core",
+  "name": "@titan-kit/core",
   "version": "0.3.26",
-  "author": "Hyperweb <developers@hyperweb.io>",
-  "description": "interchain-kit wallet connector core package",
+  "author": "BangBu <68235687+bangbu10820@users.noreply.github.com>",
+  "description": "titan-kit wallet connector core package",
   "main": "index.js",
   "module": "esm/index.js",
   "types": "index.d.ts",
-  "homepage": "https://github.com/@interchain-kit/core",
+  "homepage": "https://github.com/titan-kit/core",
   "license": "SEE LICENSE IN LICENSE",
   "publishConfig": {
     "access": "public",
@@ -14,10 +14,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/@interchain-kit/core"
+    "url": "https://github.com/titan-kit/core"
   },
   "bugs": {
-    "url": "https://github.com/@interchain-kit/core/issues"
+    "url": "https://github.com/titan-kit/core/issues"
   },
   "scripts": {
     "copy": "copyfiles -f ../../LICENSE README.md package.json dist",
