--- a/wallets/keplr-extension/package.json
+++ b/wallets/keplr-extension/package.json
@@ -31,7 +31,7 @@
   },
   "keywords": [],
   "dependencies": {
-    "@interchain-kit/core": "^0.3.26",
+    "@titan-kit/core": "^0.3.26",
     "@keplr-wallet/provider-extension": "^0.12.102"
   },
   "gitHead": "35337e4470a0594ba644d31be8e24c8e295296f6"
