chore: change lerna

--- a/lerna.json
+++ b/lerna.json
@@ -8,7 +8,7 @@
   "registry": "https://registry.npmjs.org",
   "command": {
     "create": {
-      "homepage": "https://github.com/hyperweb-io/interchain-kit",
+      "homepage": "https://github.com/cyberk-vn/titan-kit",
       "license": "SEE LICENSE IN LICENSE",
       "access": "restricted"
     },
