--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@titan-kit/react",
-  "version": "0.0.2",
+  "version": "0.0.3-alpha.2",
   "author": "BangBu <68235687+bangbu10820@users.noreply.github.com>",
   "description": "titan-kit wallet connector react package",
   "main": "index.js",
@@ -34,12 +34,12 @@
   "keywords": [],
   "dependencies": {
     "@chain-registry/v2-types": "^0.53.40",
-    "@titan-kit/core": "^0.3.26",
     "@interchain-ui/react": "1.26.1",
     "@interchainjs/cosmos": "1.11.9",
     "@interchainjs/cosmos-types": "1.11.9",
     "@interchainjs/types": "1.11.9",
     "@react-icons/all-files": "^4.1.0",
+    "@titan-kit/core": "^0.3.26",
     "@walletconnect/types": "^2.17.3",
     "interchainjs": "1.11.9",
     "zustand": "^5.0.3"
