--- a/wallets/keplr-extension/package.json
+++ b/wallets/keplr-extension/package.json
@@ -32,7 +32,7 @@
   "keywords": [],
   "dependencies": {
     "@keplr-wallet/provider-extension": "^0.12.102",
-    "@titan-kit/core": "^0.3.26"
+    "@titan-kit/core": "^0.0.3-alpha.2"
   },
   "gitHead": "35337e4470a0594ba644d31be8e24c8e295296f6"
 }
