--- a/wallets/keplr-mobile/package.json
+++ b/wallets/keplr-mobile/package.json
@@ -32,7 +32,7 @@
   },
   "keywords": [],
   "dependencies": {
-    "@titan-kit/core": "^0.3.26"
+    "@titan-kit/core": "^0.0.3-alpha.2"
   },
   "gitHead": "c7fb205222a8fe8a9266badf2f6e2afd0a1c9f33"
 }
