--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -27,23 +27,9 @@
     "@cosmjs/crypto": "^0.32.4",
     "@cosmjs/proto-signing": "^0.32.4",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@interchain-kit/coin98-extension": "^0.3.26",
-    "@interchain-kit/compass-extension": "^0.3.26",
-    "@interchain-kit/core": "^0.3.26",
-    "@interchain-kit/cosmos-extension-metamask": "^0.3.26",
-    "@interchain-kit/exodus-extension": "^0.3.26",
-    "@interchain-kit/fin-extension": "^0.3.26",
+    "@interchain-kit/core": "file:../../packages/core",
     "@interchain-kit/keplr-extension": "^0.3.26",
-    "@interchain-kit/leap-cosmos-extension-metamask": "^0.3.26",
-    "@interchain-kit/leap-extension": "^0.3.26",
-    "@interchain-kit/ledger": "^0.3.26",
-    "@interchain-kit/mock-wallet": "^0.3.26",
-    "@interchain-kit/ninji-extension": "^0.3.26",
-    "@interchain-kit/okx-extension": "^0.3.26",
-    "@interchain-kit/react": "^0.3.26",
-    "@interchain-kit/shell-extension": "^0.3.26",
-    "@interchain-kit/trust-extension": "^0.3.26",
-    "@interchain-kit/xdefi-extension": "^0.3.26",
+    "@interchain-kit/react": "file:../../packages/react",
     "@interchain-ui/react": "^1.23.31",
     "@tanstack/react-query": "4",
     "autoprefixer": "^10.4.20",
