--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@titan-kit/react-examples",
-  "author": "BangBang <>",
+  "author": "BangBu <68235687+bangbu10820@users.noreply.github.com>",
   "description": "titan-kit wallet connector core package",
   "version": "0.3.26",
   "type": "module",
