--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -31,17 +31,19 @@
     "test:coverage": "jest --coverage --watch",
     "watch:dev": "tsc -w -p tsconfig.esm.json & tsc -w"
   },
+  "resolutions": {
+    "@titan-kit/core": "file:../../packages/core"
+  },
   "keywords": [],
   "dependencies": {
     "@chain-registry/v2-types": "^0.53.40",
     "@interchain-ui/react": "1.26.1",
-    "@interchainjs/cosmos": "1.9.15",
-    "@interchainjs/cosmos-types": "1.9.15",
-    "@interchainjs/types": "1.9.15",
+    "@titanlabjs/cosmos": "0.2.7-alpha.0",
+    "@titanlabjs/cosmos-types": "0.2.7-alpha.0",
+    "@titanlabjs/types": "0.2.7-alpha.0",
     "@react-icons/all-files": "^4.1.0",
-    "@titan-kit/core": "^0.0.3-alpha.7",
+    "@titan-kit/core": "file:../../packages/core",
     "@walletconnect/types": "^2.17.3",
-    "interchainjs": "1.11.9",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -59,10 +61,10 @@
     "ts-jest": "^29.3.0"
   },
   "peerDependencies": {
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@types/react": "16 || 17 || 18 || 19",
+    "@types/react-dom": "16 || 17 || 18 || 19",
+    "react": "16 || 17 || 18 || 19",
+    "react-dom": "16 || 17 || 18 || 19"
   },
   "gitHead": "35337e4470a0594ba644d31be8e24c8e295296f6"
 }
