--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -58,7 +58,8 @@
     "@testing-library/react-hooks": "^8.0.1",
     "babel-jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.3.0"
+    "ts-jest": "^29.3.0",
+    "@walletconnect/universal-provider": "^2.19.1"
   },
   "peerDependencies": {
     "@types/react": "16 || 17 || 18 || 19",
