change to true package

--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -21,22 +21,16 @@
       "autoprefixer": {}
     }
   },
-  "resolutions": {
-    "@titan-kit/core": "file:../../packages/core",
-    "@titan-kit/react": "file:../../packages/react",
-    "@titan-kit/keplr-extension": "file:../../wallets/keplr-extension",
-    "@titan-kit/untitled-wallet": "file:../../wallets/untitled-wallet"
-  },
   "dependencies": {
     "@chain-registry/v2": "^1.71.16",
     "@chain-registry/v2-types": "^0.53.0",
     "@cosmjs/crypto": "^0.32.4",
     "@cosmjs/proto-signing": "^0.32.4",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@titan-kit/core": "file:../../packages/core",
-    "@titan-kit/keplr-extension": "file:../../wallets/keplr-extension",
-    "@titan-kit/untitled-wallet": "file:../../wallets/untitled-wallet",
-    "@titan-kit/react": "file:../../packages/react",
+    "@titan-kit/core": "^0.0.3-alpha.7",
+    "@titan-kit/keplr-extension": "^0.0.3-alpha.7",
+    "@titan-kit/untitled-wallet": "^0.0.3-alpha.7",
+    "@titan-kit/react": "^0.0.3-alpha.7",
     "@interchain-ui/react": "^1.23.31",
     "@tanstack/react-query": "4",
     "autoprefixer": "^10.4.20",
