--- a/wallets/untitled-wallet/package.json
+++ b/wallets/untitled-wallet/package.json
@@ -19,9 +19,6 @@
   "bugs": {
     "url": "https://github.com/titan-kit/untitled-wallet/issues"
   },
-  "resolutions": {
-    "@titan-kit/core": "file:../../packages/core"
-  },
   "scripts": {
     "copy": "copyfiles -f ../../LICENSE README.md package.json dist",
     "clean": "rimraf dist/**",
@@ -34,7 +31,7 @@
   },
   "keywords": [],
   "dependencies": {
-    "@titan-kit/core": "file:../../packages/core"
+    "@titan-kit/core": "^0.0.3-alpha.7"
   },
   "gitHead": "35337e4470a0594ba644d31be8e24c8e295296f6"
 }
