--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,10 @@
 {
   "lerna": "6",
-  "conventionalCommits": true,
+  "conventionalCommits": false,
   "npmClient": "yarn",
   "npmClientArgs": ["--no-lockfile"],
   "packages": ["packages/*", "wallets/*", "examples/*"],
-  "version": "0.0.3-alpha.7",
+  "version": "0.0.4-alpha.0",
   "registry": "https://registry.npmjs.org",
   "command": {
     "create": {
